--- a/package.json
+++ b/package.json
@@ -24,14 +24,13 @@
     "access": "public"
   },
   "scripts": {
-    "build": "wasm-pack build --release --target web; wasm-opt pkg/wasmer_wasi_js_bg.wasm -O2 -o pkg/wasmer_wasi_js_bg.wasm; wasm-strip pkg/wasmer_wasi_js_bg.wasm; rollup -c --environment BUILD:production",
-    "dev": "rollup -c -w",
+    "build": "npm exec -- wasm-pack build --release --target web; npm exec -- wasm-opt pkg/wasmer_wasi_js_bg.wasm -O2 -o pkg/wasmer_wasi_js_bg.wasm; npm exec -- wasm-strip pkg/wasmer_wasi_js_bg.wasm; npm exec -- rollup -c --environment BUILD:production",
+    "dev": "npm exec -- rollup -c -w",
     "lint": "",
-    "test": "jest -c jest.config.js",
+    "test": "npm exec -- jest -c jest.config.js",
     "test:watch": "npm run test -- --watch",
     "test:coverage": "npm run test -- --coverage",
-    "clean": "rimraf dist coverage",
-    "prepare": "npm-run-all clean lint build test"
+    "clean": "npm exec -- rimraf dist coverage"
   },
   "devDependencies": {
     "@babel/core": "~7.16.0",
