--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "typescript": "^4.5.2",
     "wabt": "^1.0.32",
     "wasm-opt": "^1.3.0",
-    "wasm-pack": "^0.10.3"
+    "wasm-pack": "^0.10.3",
+    "wasmer-wasi-js": "file:./pkg"
   },
   "browserslist": "> 0.5%, last 2 versions, Firefox ESR, not dead"
 }
